tests/miniJava/neg/006712_mutation.MiniJava
class java { public static void true ( String [ ] java ) { { } } }
